Plantilla principal herencia con twig

--- a/src/AppBundle/Resources/views/User/login.html.twig
+++ b/src/AppBundle/Resources/views/User/login.html.twig
@@ -1,1 +1,4 @@
-<h1> Pagina de {{titulo}}</h1>
+{% extends 'AppBundle:layouts:layout.html.twig' %}
+{% block content %}
+	<h1>Red Social la</h1>
+{% endblock %}
