--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -45,41 +45,15 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="{{ path("login") }}">
                                         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                         &nbsp;
                                         Registro
                                     </a>
                                 </li>
-                         
-                                <li>
-                                    <a href="">
-                                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                                        &nbsp;
-                                        Inicio
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                                        &nbsp;
-                                        Gente
-                                    </a>
-                                </li>
-                                <li>
-                                    <form action="" class="navbar-form navbar-left">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Buscar gente" name="search" />
-                                        </div>
-                                        <button type="submit" class="btn btn-default">
-                                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                        </button>
-                                    </form>
-                                </li>
-                           
-                        </ul>
-                                   
-                           
+
+                          </ul>
+                                                         
                     </div>
                 </div>       
             </nav>
@@ -89,11 +63,14 @@
 			<!-- contenido -->
 		{% endblock %}
 	</section>
-	<footer>
+	<footer class="col-lg-12">
 		<hr>
-		<p>
+			<div class="container">
+				<p class="text-muted">
+					creado por yo@no copi
+			    </p>
+			</div>
 			<!-- creacion de redsocial el 18 dias -->
-			creado por yo@no copi
 		</p>
 	</footer>
 </body>
