--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -3,13 +3,23 @@ body{
 	background: #eee;
 }
 /*Regsitro*/
+.register{
+	padding-top: 50px;
+    padding-right: 100px;
+    padding-bottom: 10px;
+    padding-left:  100px;
+}
+.regisTxt{
+	
+}
 .box-form{
 	background: white;
 	border: 1px solid #ccc;
 	padding: 20px;
 	padding-top: 0px;
 	margin: 0px auto;
-	float: none;
+	float: right;
+
 }
 .box-form input{
 	margin-bottom: 10px;
