--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -30,7 +30,7 @@
                         </button>
                         <a class="navbar-brand" href="{{path("app_homepage")}}">
                             <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-                            NETWORK
+                           RedSocial
                         </a>
                     </div>
                     
@@ -38,14 +38,14 @@
                         <ul class="nav navbar-nav">
                             
                                 <li>
-                                    <a href="{{ path("login") }}">
+                                    <a href="{{path("login")}}">
                                         <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
                                         &nbsp;
                                         Entrar
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="{{ path("login") }}">
+                                    <a href="{{path("register")}}">
                                         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                         &nbsp;
                                         Registro
@@ -59,6 +59,14 @@
             </nav>
 	</header>
 	<section id="content">
+		<div class="container">
+			<div class="col-lg-11">
+				{%for message in app.session.flashbag().get('status')%}
+                        <div class="alert alert-success">{{message}}</div>
+                {%endfor%}
+			</div>
+		</div>
+		<div class="clearfix"></div>
 		{% block content %}
 			<!-- contenido -->
 		{% endblock %}
