--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -2,7 +2,7 @@
 body{
 	background: #eee;
 }
-/*Regsitro*/
+/*Registro*/
 .register{
 	padding-top: 50px;
     padding-right: 100px;
@@ -11,6 +11,13 @@ body{
 }
 .regisTxt{
 	
+}
+/* login */
+.login{
+	padding-top: 50px;
+    padding-right: 100px;
+    padding-bottom: 10px;
+    padding-left:  100px;
 }
 .box-form{
 	background: white;
