--- a/src/AppBundle/Resources/views/User/login.html.twig
+++ b/src/AppBundle/Resources/views/User/login.html.twig
@@ -1,6 +1,10 @@
 {% extends 'AppBundle:layouts:layout.html.twig' %}
 {% block content %}
 	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">.col-xs-12 col-md-8</div>
+            <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
 		<div class="login col-lg-12">
 			<div class="col-lg-4 regisTxt">
 				<h1>Binvenido a SocialTecnicos</h1>
