--- a/src/AppBundle/Resources/views/User/login.html.twig
+++ b/src/AppBundle/Resources/views/User/login.html.twig
@@ -2,18 +2,14 @@
 {% block content %}
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-8">.col-xs-12 col-md-8</div>
-            <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-		</div>
-		<div class="login col-lg-12">
-			<div class="col-lg-4 regisTxt">
-				<h1>Binvenido a SocialTecnicos</h1>
+			<div class="login col-xs-12 col-md-8 col-lg-8">
+			<h1>Binvenido a SocialTecnicos</h1>
 				<hr>
 				<h3>Unete a nuestra Red</h3>
 	            <button href="{{path("register")}}" class="btn btn-primary">Registrate</button>
-			</div>
-			<div class="col-lg-4 box-form">
-				<h1>Identificarse</h1>
+	        </div>
+            <div class="box-form col-xs-6 col-md-4 col-lg-4">
+            		<h1>Identificarse</h1>
 				<hr>
 				{% if is_granted('ROLE_USER') %}
 		            {{ dump(app.user) }} <!-- ver los atributos del objeto user -->
@@ -28,7 +24,7 @@
 					<input type="submit" value="Entrar" class="btn btn-success">
 					<input type="hidden" name="_target_path" value="/home">
 				</form>
-			</div>		
-	    </div>
+            </div>
+		</div>
 	</div>
 {% endblock %}
