--- a/src/AppBundle/Resources/views/User/register.html.twig
+++ b/src/AppBundle/Resources/views/User/register.html.twig
@@ -5,20 +5,20 @@
 {% endblock %}
 {% block content %}
 	<div class="container">
-		<div class="register col-lg-12">
-			<div class="col-lg-4 regisTxt">
+		<div class="row">
+			<div class="register col-xs-12 col-md-8 col-lg-8">
 				<h1>Binvenido a SocialTecnicos</h1>
 				<hr>
 				<h3>Registrate</h3>
 	            <button class="btn btn-primary">Registrate</button> 
 			</div>
-			<div class="col-lg-5 box-form">
+			<div class="box-form col-xs-6 col-md-4 col-lg-4">
 				<h2>Registrate</h2>
 				<hr/>
 				{{form_start(form, {'action':'','method':'POST'})}}
 				{{form_errors(form)}}
 				{{form_end(form)}}
-			</div>	
-	    </div>
+			</div>
+     	</div>
 	</div>
 {% endblock %}
