--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -8,7 +8,7 @@
 	{% block stylesheets %}
 		<!-- estilos css -->
 		<link rel="stylesheet" type="text/css" href="{{ asset('assets/bootstrap/css/bootstrap.min.ss') }}">
-		<link rel="stylesheet" type="text/css" href="{{ asset('assets/css/bootstrap.cosmo.min.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ asset('assets/css/bootstrap.materia.min.css') }}">
 		<link rel="stylesheet" type="text/css" href="{{ asset('assets/css/styles.css') }}">
 	{% endblock %}
 	{% block javascripts %}
@@ -16,6 +16,7 @@
 		<script type="text/javascript">
 		var URL = "{{ app.request.getSchemeAndHttpHost () }}";
 		</script>
+      <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
 		<script type="text/javascript" src="{{ asset('assets/js/jquery.min.js') }}"></script>
 		<script type="text/javascript" src="{{ asset('assets/bootstrap/js/bootstrap.min.js') }}"></script>
 	{% endblock %}	
@@ -23,78 +24,57 @@
 <body>
 	<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">RedSocial</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          {% if app.user == null %} <!-- no mostrar el menu si esta logeado -->
-              <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="{{path("login")}}">Entrar <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{{path("register")}}">Registro</a>
-                  </li>
-               </ul>
-         {% endif %}
-
-       <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-         {% if app.user !=null %} <!-- verifica si es cliente esta logeado -->
-
-          
-          <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-  <button type="button" class="btn btn-primary">Primary</button>
-  <div class="btn-group" role="group">
-    <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-      <a class="dropdown-item" href="#">Dropdown link</a>
-      <a class="dropdown-item" href="#">Dropdown link</a>
-    </div>
-  </div>
-</div>
-                  <li class="dropdown">
-                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                {{app.user.name}} {{app.user.surname}}
-                                <span class="caret"></span>
-                            </a>
-                                  <ul class="dropdown-menu">
-                                    <li>
-                                      <a href="">
-                                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;
-                                        Mis perfil
-                                      </a>
-                                    </li>
-                                    <li>
-                                      <a href="">
-                                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> &nbsp;
-                                        Mis datos
-                                      </a>
-                                    </li>
-                                    <li role"separator" class="divider"></li>
-                                    <li>
-                                      <a href="{{ path("logout")}}"> <!-- salir de session -->
-                                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> &nbsp;
-                                        Salir
-                                      </a>
-                                      </li>
-                                    <li>
-                                      <a href="">
-                                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> &nbsp;
-                                        Ayuda
-                                      </a>
-                                    </li>
-                                  </ul>
-                                </li>
-                                      
-                          {% endif %}
-                      </div>
-                  </div>       
-             </div>
-         </nav>
+      <div class="container">
+          <a class="navbar-brand" href="#">RedSocial</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          <div class="collapse navbar-collapse" id="navbarColor01">
+            {% if app.user == null %} <!-- no mostrar el menu si esta logeado -->
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="{{path("login")}}">Entrar <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{path("register")}}">Registro</a>
+                    </li>
+                 </ul>
+           {% endif %}
+           {% if app.user !=null %} <!-- verifica si es cliente esta logeado -->
+              <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+              </form>
+              <ul class="nav navbar-nav ml-auto">
+                 <li class="nav-item dropdown">
+                         <a class="text-light nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                           {{app.user.name}} {{app.user.surname}}
+                         </a>
+                         <div class="dropdown-menu">
+                           <a class="dropdown-item" href="#">
+                             <ion-icon name="person"></ion-icon>&nbsp;
+                             Mis perfil
+                           </a>
+                           <a class="dropdown-item" href="#">
+                             <ion-icon name="archive"></ion-icon>
+                             Mis datos
+                           </a>
+                           <a class="dropdown-item" href="{{ path("logout")}}">
+                             <ion-icon name="log-in"></ion-icon>
+                             Salir
+                           </a>
+                           <div class="dropdown-divider"></div>
+                           <a class="dropdown-item" href="#">
+                         <ion-icon name="help-circle-outline"></ion-icon>
+                          Ayuda
+                       </a>
+                     </div>
+                   </li> 
+              </ul>
+           {% endif %}
+        </div>      
+      </div>
+    </nav>
 	</header>
 	<section id="content">
 		<div class="container">
@@ -107,6 +87,7 @@
 		<div class="clearfix"></div>
 		{% block content %}
 			<!-- contenido -->
+   
 		{% endblock %}
 	</section>
 </body>
