--- a/src/AppBundle/Resources/views/User/edit_user.html.twig
+++ b/src/AppBundle/Resources/views/User/edit_user.html.twig
@@ -1,6 +1,4 @@
 {% extends 'AppBundle:layouts:layout.html.twig' %}
 {% block content %}
-	<div class="container">
-		<h1>Bien</h1>
-	</div>
+	<h1>mis datos</h1>
 {% endblock %}
