--- a/src/AppBundle/Resources/views/User/register.html.twig
+++ b/src/AppBundle/Resources/views/User/register.html.twig
@@ -12,7 +12,7 @@
 				<h3>Registrate</h3>
 	            <button class="btn btn-primary">Registrate</button> 
 			</div>
-			<div class="box-form col-xs-6 col-md-4 col-lg-4">
+			<div class="box-form col-xs-6 col-md-4 col-lg-4 fromulario">
 				<h2>Registrate</h2>
 				<hr/>
 				{{form_start(form, {'action':'','method':'POST'})}}
