--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -23,12 +23,13 @@ body{
 	background: white;
 	border: 1px solid #ccc;
 	padding: 20px;
-	padding-top: 50px;
+	padding-top: 30px;
 	margin: 0px auto;
-	float: right;
 	margin-top: 20px;
-
 }
 .box-form input{
 	margin-bottom: 10px;
+}
+.fromulario{
+	float: right;
 }
