--- a/src/AppBundle/Resources/views/User/login.html.twig
+++ b/src/AppBundle/Resources/views/User/login.html.twig
@@ -8,7 +8,7 @@
 				<h3>Unete a nuestra Red</h3>
 	            <button href="{{path("register")}}" class="btn btn-primary">Registrate</button>
 	        </div>
-            <div class="box-form col-xs-6 col-md-4 col-lg-4">
+            <div class="box-form col-xs-6 col-md-4 col-lg-4 fromulario">
             		<h1>Identificarse</h1>
 				<hr>
 				{% if is_granted('ROLE_USER') %}
