--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -90,5 +90,18 @@
    
 		{% endblock %}
 	</section>
+  <footer>
+      <hr/>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <p class="text-muted">Desarrollar una red social con Symfony3 Por Yo DECA</p>
+            </div>
+            <div class="col-lg-6">
+              <p class="text-muted">Desarrollar una red social con Symfony3 Por Yo DECA</p>
+            </div>
+          </div> 
+       </div>
+  </footer>
 </body>
 </html>
