--- a/src/AppBundle/Resources/views/User/edit_user.html.twig
+++ b/src/AppBundle/Resources/views/User/edit_user.html.twig
@@ -1,12 +1,19 @@
 {% extends 'AppBundle:layouts:layout.html.twig' %}
 {% block content %}
 	<div class="container col-lg-8">
-		<div class="box-form">
-			<h2>Mis Datos</h2>
-			<hr/>
-			{{form_start(form, {'enctype':'multipart/form-data'})}} <!-- se le reconoce que enviara datos -->
-			{{form_end(form)}}
-
+		<div class="row box-form">
+			<div class="col-lg-4">
+				<div class="">
+					<h2>Editar Perfil</h2>
+			        <hr/>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="">
+			        {{form_start(form, {'enctype':'multipart/form-data'})}} <!-- se le reconoce que enviara datos -->
+			        {{form_end(form)}}
+		        </div>
+			</div>
 		</div>
 	</div>
 	
