--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -48,6 +48,13 @@
               <ul class="nav navbar-nav ml-auto">
                  <li class="nav-item dropdown">
                          <a class="text-light nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                          <div class="avatar">
+                              {%if app.user.image == null %}
+                                    <img src="{{ asset('assets/images/default.png')}}" />
+                                  {%else%}
+                                        <img src="{{ asset('uploads/users/'~app.user.image)}}" />
+                                    {%endif%}
+                           </div>
                            {{app.user.name}} {{app.user.surname}}
                          </a>
                          <div class="dropdown-menu">
