--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -30,21 +30,32 @@
               <span class="navbar-toggler-icon"></span>
             </button>
           <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
             {% if app.user == null %} <!-- no mostrar el menu si esta logeado -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                <li class="nav-item active">
                       <a class="nav-link" href="{{path("login")}}">Entrar <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="{{path("register")}}">Registro</a>
                     </li>
-                 </ul>
+           {% else %}
+            <li>
+               <a class="nav-link" href="{{ path("app_homepage")}}"><ion-icon name="home"></ion-icon> 
+               Inicio 
+               </a>
+            </li>
+            <li>
+               <a class="nav-link" href="{{ path("user_list")}}"><ion-icon name="list-box"></ion-icon> 
+               Gente 
+               </a>
+            </li>
            {% endif %}
+           </ul>
            {% if app.user !=null %} <!-- verifica si es cliente esta logeado -->
-              <form class="form-inline my-2 my-lg-0">
+              <!-- <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="text" placeholder="Search">
                   <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-              </form>
+              </form> -->
               <ul class="nav navbar-nav ml-auto">
                  <li class="nav-item dropdown">
                          <a class="text-light nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
