--- a/src/AppBundle/Resources/views/User/users.html.twig
+++ b/src/AppBundle/Resources/views/User/users.html.twig
@@ -11,7 +11,22 @@
 			<hr>
 			<div class="box-content box-users">
 			{% for user in pagination %} <!-- Que recorra toda los lobjetos del usuario -->
-				{{user.email}}<br>
+				<div class="col-lg-12 user-item">
+					<div class="avatar">
+						{%if user.image == null %}
+                                <img src="{{ asset('assets/images/default.png')}}" />
+                            {%else%}
+                               <img src="{{ asset('uploads/users/'~user.image)}}" />
+                         {%endif%}
+					</div>
+					<div class="user-item-content">
+						<p>{{ user.name }}{{ user.surname }} - {{ user.nick }}</p>
+						<p>{{ user.bio }}</p>
+					</div>
+					<div class="clearfix">
+						<hr>
+					</div>
+				</div>
 			{% endfor %}
 			</div>
 			<br>
