--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -49,13 +49,19 @@
                Gente 
                </a>
             </li>
+            <li>
+               <form action="{{ path('user_search') }}" class="form-inline my-2 my-lg-0">
+
+                  <input class="form-control mr-sm-2" type="text" placeholder="Search" name="search">
+                  <button class="btn btn-secondary my-1 my-sm-0" type="submit">Search</button>
+                  <!-- <button type="submit" class="btn btn-secondary btn-sm">Search</button> -->
+
+              </form>
+            </li>
            {% endif %}
            </ul>
            {% if app.user !=null %} <!-- verifica si es cliente esta logeado -->
-              <!-- <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-              </form> -->
+              
               <ul class="nav navbar-nav ml-auto">
                  <li class="nav-item dropdown">
                          <a class="text-light nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
