--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -16,9 +16,10 @@
 		<script type="text/javascript">
 		var URL = "{{ app.request.getSchemeAndHttpHost () }}";
 		</script>
-      <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
 		<script type="text/javascript" src="{{ asset('assets/js/jquery.min.js') }}"></script>
 		<script type="text/javascript" src="{{ asset('assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('assets/js/jquery-ias.min.js') }}"></script> <!-- js de scroll infinito -->
 	{% endblock %}	
 </head>
 <body>
