--- a/src/AppBundle/Resources/views/User/users.html.twig
+++ b/src/AppBundle/Resources/views/User/users.html.twig
@@ -28,6 +28,13 @@
 						<p>{{ user.name }}{{ user.surname }} - {{ user.nick }}</p>
 						<p>{{ user.bio }}</p>
 					</div>
+					{% if app.user.id != user.id %}
+						<div class="pull-right buttons-following">
+							<button class="btn btn-sm btn-success btn-follow" data-followed="{{user.id}}">
+							Seguir
+							</button>
+						</div>
+					{% endif %}
 					<div class="clearfix">
 						<hr>
 					</div>
