Dejar de seguir usuarios (unfollow)

--- a/src/AppBundle/Resources/views/User/users.html.twig
+++ b/src/AppBundle/Resources/views/User/users.html.twig
@@ -34,6 +34,11 @@
 							Seguir
 							</button>
 						</div>
+						<div class="pull-right buttons-following">
+							<button class="btn btn-sm btn-default btn-unfollow" data-followed="{{user.id}}">
+							Dejar de seguir
+							</button>
+						</div>
 					{% endif %}
 					<div class="clearfix">
 						<hr>
