--- a/src/AppBundle/Resources/views/User/users.html.twig
+++ b/src/AppBundle/Resources/views/User/users.html.twig
@@ -30,12 +30,21 @@
 					</div>
 					{% if app.user.id != user.id %}
 						<div class="pull-right buttons-following">
-							<button class="btn btn-sm btn-success btn-follow" data-followed="{{user.id}}">
+							<button class="btn btn-sm btn-success btn-follow
+							{% if app.user|following(user) == true %}
+                                            hidden
+                            {% endif %}
+                            " 
+                            data-followed="{{user.id}}">
 							Seguir
 							</button>
-						</div>
-						<div class="pull-right buttons-following">
-							<button class="btn btn-sm btn-default btn-unfollow" data-followed="{{user.id}}">
+					
+							<button class="btn btn-sm btn-default btn-unfollow
+							{% if app.user|following(user) == false %}
+                                            hidden
+                            {% endif %}
+                            " 
+                            data-followed="{{user.id}}">
 							Dejar de seguir
 							</button>
 						</div>
