--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		{% block title %}Red Social{% endblock %}
+		{% block title %}DRINTI{% endblock %}
 	</title>
 	{% block stylesheets %}
 		<!-- estilos css -->
@@ -26,7 +26,7 @@
 	<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
-          <a class="navbar-brand" href="{{ path("home_publications")}}">RedSocial</a>
+          <a class="navbar-brand" href="{{ path("home_publications")}}">DRINTI</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -116,17 +116,16 @@
 		{% endblock %}
 	</section>
   <footer>
-      <hr/>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <p class="text-muted">Desarrollar una red social con Symfony3 Por Yo DECA</p>
-            </div>
-            <div class="col-lg-6">
-              <p class="text-muted">Desarrollar una red social con Symfony3 Por Yo DECA</p>
-            </div>
-          </div> 
-       </div>
+    <!--     <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <p class="text-muted">Desarrollar una red social con Symfony3 Por Yo DECA</p>
+        </div>
+        <div class="col-lg-6">
+          <p class="text-muted">Desarrollar una red social con Symfony3 Por Yo DECA</p>
+        </div>
+      </div> 
+           </div> -->
   </footer>
 </body>
 </html>
