--- a/src/AppBundle/Resources/views/User/register.html.twig
+++ b/src/AppBundle/Resources/views/User/register.html.twig
@@ -7,7 +7,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="register col-xs-12 col-md-8 col-lg-8">
-				<h1>Binvenido a SocialTecnicos</h1>
+				<h1>Binvenido a Nameless</h1>
 				<hr>
 				<h3>Registrate</h3>
 	            <button class="btn btn-primary">Registrate</button> 
