--- a/src/AppBundle/Resources/views/layouts/layout.html.twig
+++ b/src/AppBundle/Resources/views/layouts/layout.html.twig
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		{% block title %}DRINTI{% endblock %}
+		{% block title %}Nameless{% endblock %}
 	</title>
 	{% block stylesheets %}
 		<!-- estilos css -->
@@ -26,7 +26,7 @@
 	<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
-          <a class="navbar-brand" href="{{ path("home_publications")}}">DRINTI</a>
+          <a class="navbar-brand" href="{{ path("home_publications")}}">Nameless</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
