--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -732,6 +732,11 @@ body{
     width: 50px;
     height: 50px;
 }
+.user-picy .post{
+ width: 100px;
+ 
+}
+
 .user-picy img {
     object-fit: cover;
 
